--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.daasuu:animateHorizontalProgressBar:0.2.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile files('libs/itextpdf-5.5.8.jar')
 }
